--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,7 +3,7 @@
     <div class="container">
         <!-- Brand -->
         <a class="navbar-brand" href="#">
-            <span>KAYANK</span>
+            <span>Little Fashion</span>
         </a>
 
         <!-- Toggler for mobile view -->
